# nodelet_example

./: CMakeLists.txt  README.md  nodelets.xml  package.xml
include/kill_test_nodelet/: Chatter.h
launch/: example.launch
src/: Chatter.cpp
